<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txv_setInfo_title"
        android:text="@string/detInfoForm"
        style="@style/title_txv_style"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_name"
        style="@style/edt_style"
        android:hint="@string/nameText"
        app:layout_constraintTop_toBottomOf="@id/txv_setInfo_title"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_nationalCode"
        style="@style/edt_style"
        android:inputType="number"
        android:hint="@string/nationalCode_Text"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_bornLocation"
        style="@style/edt_style"
        android:hint="@string/bornLocation"
        app:layout_constraintTop_toBottomOf="@id/edt_nationalCode"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_address"
        style="@style/edt_style"
        android:hint="@string/address"
        app:layout_constraintTop_toBottomOf="@id/edt_bornLocation"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_postCode"
        style="@style/edt_style"
        android:inputType="number"
        android:hint="@string/postCode"
        app:layout_constraintTop_toBottomOf="@id/edt_address"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gender_txv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_postCode" />

    <RadioGroup
        android:id="@+id/gender_radioG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_txv">

        <RadioButton
            android:id="@+id/female_checkBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/male_checkBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/male" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_saveInfo"
        android:text="@string/setInfo"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_radioG"
        style="@style/btn_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>